apps/applications/grafana/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
  labels:
    app.kubernetes.io/name: grafana
